# duck_hunt

./: .CLAUDE.md  .gitignore  .gitmodules  >(tee  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  PARSERS.md  README.md  RELEASE_NOTES_v1.2.0.md  build.sh  debug_registry.cpp  extension_config.cmake  make-test.out  make.out  mkdocs.yml  new-formats.md  release.md  test_clang_tidy.txt  test_clang_tidy2.txt  test_clang_tidy3.txt  test_clang_tidy_final.txt  test_gh_run_list.txt  test_junit.xml  test_phase3a.py  test_phase3a_validation.sql  test_phase3b_validation.sql
.claude/commands/: review-extension.md
.github/workflows/: MainDistributionPipeline.yml
.lq/: commands.yaml  config.yaml
docs/: custom-parsers.md  examples.md  field_mappings.md  format-maturity.md  formats.md  index.md  migration-guide.md  requirements.txt  schema.md  workflow-formats.md
docs/proposals/: log_line_tracking.md  severity-threshold.md  webbed_xml_integration.md
examples/: README.md
examples/analytics/: failure_correlation.sql  predictive_analytics.sql  temporal_analysis.sql
examples/dashboards/: error_overview.sql
external-tests/: duck_hunt_loghub.test  loghub_samples.test
scripts/: migrate_getformat.py
src/: config_parser_functions.cpp  duck_hunt_detect_format_function.cpp  duck_hunt_diagnose_function.cpp  duck_hunt_extension.cpp  duck_hunt_formats_function.cpp  duck_hunt_macros.cpp  parse_duck_hunt_workflow_log_function.cpp  parse_workflow_logs_function.cpp  read_duck_hunt_log_function.cpp  read_duck_hunt_workflow_log_function.cpp  read_test_results_function.cpp  read_workflow_logs_function.cpp  status_badge_function.cpp  validation_event_types.cpp  workflow_engine_interface.cpp
src/core/: content_extraction.hpp  content_extraction_helpers.cpp  context_extraction.cpp  context_extraction.hpp  error_patterns.cpp  error_patterns.hpp  file_utils.cpp  file_utils.hpp  format_detector.cpp  format_detector.hpp  format_utils.cpp  format_utils.hpp  legacy_parser_registry.cpp  legacy_parser_registry.hpp  new_parser_registry.cpp  new_parser_registry.hpp  parse_content.cpp  parse_content.hpp  parser_registry.cpp  parser_registry.hpp  webbed_integration.cpp  webbed_integration.hpp  zipfs_integration.cpp  zipfs_integration.hpp
src/include/: config_parser_functions.hpp  duck_hunt_detect_format_function.hpp  duck_hunt_diagnose_function.hpp  duck_hunt_extension.hpp  duck_hunt_formats_function.hpp  duck_hunt_macros.hpp  parse_duck_hunt_workflow_log_function.hpp  parse_workflow_logs_function.hpp  read_duck_hunt_log_function.hpp  read_duck_hunt_workflow_log_function.hpp  read_test_results_function.hpp  read_workflow_logs_function.hpp  status_badge_function.hpp  validation_event_types.hpp  workflow_engine_interface.hpp
src/parsers/app_logging/: bunyan_parser.cpp  bunyan_parser.hpp  init.cpp  log4j_parser.cpp  log4j_parser.hpp  logrus_parser.cpp  logrus_parser.hpp  nlog_parser.cpp  nlog_parser.hpp  pino_parser.cpp  pino_parser.hpp  python_logging_parser.cpp  python_logging_parser.hpp  rails_log_parser.cpp  rails_log_parser.hpp  ruby_logger_parser.cpp  ruby_logger_parser.hpp  serilog_parser.cpp  serilog_parser.hpp  winston_parser.cpp  winston_parser.hpp
src/parsers/base/: base_parser.hpp  parser_interface.hpp  safe_parsing.hpp  xml_parser_base.hpp
src/parsers/build_systems/: bazel_parser.cpp  bazel_parser.hpp  cargo_parser.cpp  cargo_parser.hpp  cmake_parser.cpp  cmake_parser.hpp  docker_build_parser.cpp  docker_build_parser.hpp  gcc_parser.cpp  gcc_parser.hpp  (+15 more)
src/table_functions/: new_read_duck_hunt_log.hpp  new_read_test_results.hpp
test/experimental/: test_parse_results.sql  test_phase3a.py  test_simple.sql
test/samples/: EXTERNAL_DATASETS.md  download_logchunks.sh  eslint.json  gotest.json  large_build.out  make.out  mypy.txt  pytest.json  spack_build.out
test/sql/: app_logging.test  app_logging_2.test  ci_parsers.test  cloud_logs.test  code_review_issues.test  compression.test  config_parser.test  content_parameter.test  context_extraction.test  coverage_text.test  detect_format.test  diagnose_functions.test  duck_hunt.test  duck_hunt_loghub.test  duck_hunt_phase3a.test  duckdb_test_parser.test  format_detection.test  format_groups.test  gcc_parser.test  github_actions_zip.test  ignore_errors.test  infrastructure.test  invalid_format.test  isort_parser.test  junit_xml.test  lateral_join.test  lcov_parser.test  log_line_tracking.test  loghub_samples.test  long_line_handling.test  make_parser.test  missing_files.test  new_formats.test  parse_duck_hunt_log.test  parse_test_results.test  parser_registry.test  pytest_parser.test  python_formatters.test  read_duck_hunt_log.test  read_test_results.test  (+16 more)
test/wasm/: README.md  check_wasm_imports.mjs  load_test.cjs  package.json  run_wasm_checks.sh  selftest.mjs  wasm_symbol_classify.mjs
tests/playwright/: results.json
workspace/: additional_formats_plan.md  ansible_sample.txt  autopep8_sample.txt  bandit_sample.json  bandit_sample.txt  bazel_sample.txt  black_mypy_output_formats.md  black_sample.txt  cargo_build_sample.txt  cargo_test_sample.json  clang_tidy_sample.txt  clippy_sample.json  cmake_sample.txt  complete_duckdb_test_sample.txt  coverage_sample.txt  docker_sample.txt  drone_ci_sample.txt  duckdb_test_sample.txt  eslint_sample.json  flake8_sample.txt  gdb_sample.txt  github_actions_sample.txt  gitlab_ci_sample.txt  gotest_sample.jsonl  gradle_build_sample.txt  gtest_sample.txt  hadolint_sample.json  isort_sample.txt  jenkins_sample.txt  junit_sample.txt  ktlint_sample.json  kube_score_sample.json  lintr_sample.json  long_line_sample.txt  make_error_sample.txt  markdownlint_sample.json  maven_build_sample.txt  mocha_chai_sample.txt  msbuild_sample.txt  mypy_sample.txt  (+20 more)
workspace/design/: phase3b_error_categorization.md  phase3b_implementation_plan.md  refactoring_architecture.md  workflow_engines_architecture.md
workspace/issues/: code_review_checklist.md  config_parser_extensions.md  migrate-to-modular-parser-registry.md  refactor-read-duck-hunt-log-function.md
workspace/test_files/: complex_example.py  example.py  good_example.py
(+330 files in other folders)
